update tests to use explicit Keycloak container image (nightly)